# vacancy-mirror-chatbot-rag

./: .dockerignore  .env.local.example  .gitignore  BACKEND_SECURITY_AUDIT.md  BACKEND_SECURITY_FIXES_APPLIED.md  BACKEND_SECURITY_README.md  BACKEND_SECURITY_SUMMARY.md  BOTH_SERVERS_SECURITY_SUMMARY.md  CI_CD_GUIDE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEV_SETUP.md  Dockerfile  HETZNER_DEPLOYMENT_SPEC.md  HETZNER_METRICS_ANALYSIS.md  INFRASTRUCTURE_SUMMARY.md  Makefile  PHASE2_MANUAL_DEPLOY.md  README.md  SCRAPER_SECURITY_AUDIT.md  SCRAPER_SECURITY_README.md  SCRAPER_SECURITY_SUMMARY.md  SCRAPER_STATUS_REPORT.md  SECURITY_AUDIT_SERVERS.md  SECURITY_FIXES_APPLIED.md  deploy_both_servers.sh  deploy_phase2.sh  deploy_phase2_auto.sh  deploy_security_fixes.sh  docker-compose.dev.yml  docker-compose.yml  grafana-scraper.sh  pyproject.toml  setup_github_secrets.sh  ship.sh  test_embeddings.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml  test_strip_md.py
backend/src/backend/: cli.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/backend/services/: assistant_infer_client.py  assistant_infer_server.py  assistant_knowledge.py  chatwoot_client.py  email_sender.py  google_sheets.py  openai.py  postgres.py  reasoning_orchestrator.py  stripe_webhook.py  telegram_bot.py
backend/src/backend/services/assistant/: infer_client.py  infer_server.py  knowledge.py  knowledge_branch.py  openai.py  orchestrator.py  simple_branch.py  statistics_branch.py
backend/src/backend/services/bot/: telegram.py
backend/src/backend/services/integrations/: chatwoot.py  google_sheets.py  stripe.py
backend/tests/: test_assistant_infer_client.py  test_assistant_knowledge.py  test_chatwoot_client.py  test_chatwoot_webhook_helpers.py  test_cli_assistant_infer.py  test_email_sender.py  test_reasoning_orchestrator.py  test_telegram_assistant_scaling.py  test_telegram_bot_schedule.py  test_telegram_bot_start_sheets.py  test_telegram_search_markdown.py  test_telegram_support_email_flow.py  test_telegram_text_normalizer.py
config/: profile_strategy.json
infra/: INFRASTRUCTURE.md
infra/db/: init.sql  migrate_add_ciphertext.sql  (+4 more)
notes/: Architecture — Assistant Pipeline.md  Knowledge Sections — Index.md  TODO — Assistant.md
scraper/: ARCHITECTURE_DIAGRAM.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_PHASE2.md  QUICKSTART_PROXY.md  README_CRON.md  README_PROXY_SETUP.md  crontab  crontab.crond  entrypoint.sh  pyproject.toml  supervisord.conf
scraper/scripts/: chaos_runner.sh  collect_proxy_usage_runner.sh  rotate_proxy_session.sh  rotate_proxy_session_webshare.sh  rotate_webshare_session.sh  run_scraper.py  scrape_category_uids.py  scraper_runner.sh  show_category_load.py
scraper/src/scraper/: categories.py  cli.py  paging_bounds.py  scheduler.py  state.py  timezones.py
scraper/src/scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scraper/src/scraper/services/: flaresolverr_client.py  postgres.py  upwork_scraper.py  webshare.py
scraper/src/scraper_api/: __init__.py  main.py
scraper/tests/: test_paging_bounds.py  test_proxy_session_policy.py
scripts/: chatwoot.docker-compose.yml  data_tests_dump.txt  intercept_upwork_api.py  run_scraper.py  scrape_category_uids.py  show_category_load.py  sidebar_dump.html  test_nodriver.py  upwork_category_uids.json
tests/: test_analysis_posts.py  test_apify_service.py  test_cli_collection.py  test_drafts.py  test_fact_safe_drafts.py  test_image_service.py  test_market_pattern_payload.py  test_recommendations.py  test_upwork_service.py
web/: README.md
web/api/: Dockerfile  pyproject.toml
web/api/src/app/: main.py
web/api/src/app/routers/: health.py  webhook.py
(+75 files in other folders)
