[project]
name = "baltic-marketplace"
version = "0.1.0"
description = "Python environment for LinkedIn AI pipeline"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
baltic-marketplace = "baltic_marketplace.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
