[project]
name = "vacancy-mirror-chatbot-rag"
version = "0.1.0"
description = "Minimal Python scaffold."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers>=3.0.1",
    "playwright>=1.40.0",
    "fake-useragent>=1.5.0",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
