[project]
name = "backend"
version = "0.1.0"
description = "Vacancy Mirror backend — NLP pipeline, AI, Telegram bot, API."
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "gspread>=6.0",
    "aiohttp>=3.13.4",  # CVE fixes: 24 vulnerabilities (DoS, directory traversal, request smuggling, XSS, etc.)
    "numpy>=1.26",
    "scikit-learn>=1.5.0",  # CVE-2024-5206 fix (sensitive data leakage in TfidfVectorizer)
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
