[project]
name = "vacancy-mirror-api"
version = "0.1.0"
description = "FastAPI backend for vacancy-mirror.com"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "stripe>=9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
